--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4",
+    "jspdf": "^3.0.3",
     "next": "14.2.5",
+    "qr-code-styling": "^1.9.2",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-swipeable": "^7.0.2",
     "styled-components": "^6.1.19",
     "twilio": "^5.8.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/twilio": "^3.19.2",
